contrib/alma_9_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: alma_9
  name: alma-9
  namespace: default
spec:
  containers:
  - image: almalinux:9
    name: centos
    command: ['sleep', '36000000']
#    resources:
#        limits:
#            cpu: 0.2
#        requests:
#            cpu: 0.1
