contrib/centos-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: centos
  name: centos
  namespace: default
spec:
  volumes:
    - name: nfs-2-fab-lab-dummy
      persistentVolumeClaim:
        claimName: nfs-2.fab.lab.dummy
  containers:
  - image: centos:8
    name: centos
    command: ['sleep', '3600']
    resources: {}
    volumeMounts:
      - mountPath: "/mnt/blarg"
        name: nfs-2-fab-lab-dummy
  nodeSelector:
    topology.kubernetes.io/zone: labb
status: {}
