contrib/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: rrk-blarg-primary
  labels:
    RedisReplication: rrk-blarg
    RedisReplicationRole: Primary
spec:
  type: NodePort
  ports:
    - port: 6379
      protocol: TCP
  selector:
    RedisReplication: rrk-blarg
    RedisReplicationRole: Primary
---
apiVersion: v1
kind: Service
metadata:
  name: rrk-blarg-secondary
  labels:
    RedisReplication: rrk-blarg
    RedisReplicationRole: Secondary
spec:
  type: NodePort
  ports:
  - port: 6379
    protocol: TCP
  selector:
    RedisReplication: rrk-blarg
    RedisReplicationRole: Secondary
